[tool.poetry]
name = "urza"
version = "0.1.0"
description = ""
authors = ["Jaanis Fehling"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
alpaca-py = "^0.6.1"
django = "^4.1.4"
daphne = "^4.0.0"
channels = "^4.0.0"
channels-redis = "^4.0.0"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"